<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_2">

    <View
        android:id="@+id/divider_1"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintHorizontal_bias=".13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintHorizontal_bias=".26"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_3"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintHorizontal_bias=".39"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_4"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintHorizontal_bias=".52"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_5"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintHorizontal_bias=".62"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_6"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintHorizontal_bias=".72"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_7"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintHorizontal_bias=".82"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider_8"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintHorizontal_bias=".92"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/label_ino"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_ino"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/divider_1"/>

    <TextView
        android:id="@+id/label_model_no"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_model_no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/divider_1"
        app:layout_constraintRight_toLeftOf="@id/divider_2"/>

    <TextView
        android:id="@+id/label_bom_no"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_bom_no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/divider_2"
        app:layout_constraintRight_toLeftOf="@id/divider_3"/>

    <TextView
        android:id="@+id/label_code"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_code"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/divider_3"
        app:layout_constraintRight_toLeftOf="@id/divider_4"/>

    <TextView
        android:id="@+id/label_sole"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_sole"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/divider_4"
        app:layout_constraintRight_toLeftOf="@id/divider_5"/>

    <TextView
        android:id="@+id/label_color"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/divider_5"
        app:layout_constraintRight_toLeftOf="@id/divider_6"/>

    <TextView
        android:id="@+id/label_size"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/divider_6"
        app:layout_constraintRight_toLeftOf="@id/divider_7"/>

    <TextView
        android:id="@+id/label_qty"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_qty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/divider_7"
        app:layout_constraintRight_toLeftOf="@id/divider_8"/>

    <TextView
        android:id="@+id/label_action"
        style="@style/Item.AutoSizeText.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/label_part_in_action"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/divider_8"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>