<?xml version="1.0" encoding="utf-8"?>
<layout >

    <data>

        <variable
            name="vm"
            type="com.roemsoft.hengmao.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/white">

        <ImageView
            android:id="@+id/login_bg"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:contentDescription="@null"
            android:src="@color/colorPrimaryDark"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHeight_percent="0.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_32"
            android:layout_below="@id/login_bg"
            android:background="@drawable/bg_login"
            app:layout_constraintVertical_bias=".65"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/label_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_90"
                android:textSize="@dimen/sp_28"
                android:textColor="@color/black"
                android:text="@string/label_login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <View
                android:id="@+id/layout_username"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                android:background="@drawable/bg_login_input"
                app:layout_constraintTop_toBottomOf="@id/label_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/login_user_icon"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_username"
                app:layout_constraintTop_toTopOf="@id/layout_username"
                app:layout_constraintBottom_toBottomOf="@id/layout_username"
                app:layout_constraintLeft_toLeftOf="@id/layout_username" />

            <ImageView
                android:id="@+id/login_user_delete_icon"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:padding="@dimen/dp_4"
                android:contentDescription="@null"
                android:src="@drawable/ic_delete"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@id/layout_username"
                app:layout_constraintBottom_toBottomOf="@id/layout_username"
                app:layout_constraintRight_toRightOf="@id/layout_username" />

            <EditText
                android:id="@+id/login_username_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_12"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:text="@={vm.username}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:autofillHints=""
                android:hint="@string/label_login_username_hint"
                android:background="@null"
                app:layout_constraintTop_toTopOf="@id/layout_username"
                app:layout_constraintBottom_toBottomOf="@id/layout_username"
                app:layout_constraintLeft_toRightOf="@id/login_user_icon"
                app:layout_constraintRight_toLeftOf="@id/login_user_delete_icon" />

            <View
                android:id="@+id/layout_pw"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                android:background="@drawable/bg_login_input"
                app:layout_constraintTop_toBottomOf="@id/layout_username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/login_pw_icon"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:paddingStart="@dimen/dp_2"
                android:paddingEnd="@dimen/dp_2"
                android:contentDescription="@null"
                android:src="@drawable/ic_pw"
                app:layout_constraintTop_toTopOf="@id/layout_pw"
                app:layout_constraintBottom_toBottomOf="@id/layout_pw"
                app:layout_constraintLeft_toLeftOf="@id/layout_pw" />

            <ImageView
                android:id="@+id/login_pw_transformation_icon"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:padding="@dimen/dp_4"
                android:contentDescription="@null"
                android:src="@drawable/ic_pw_transformation"
                app:layout_constraintTop_toTopOf="@id/layout_pw"
                app:layout_constraintBottom_toBottomOf="@id/layout_pw"
                app:layout_constraintRight_toRightOf="@id/layout_pw" />

            <ImageView
                android:id="@+id/login_pw_delete_icon"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:padding="@dimen/dp_4"
                android:contentDescription="@null"
                android:src="@drawable/ic_delete"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@id/layout_pw"
                app:layout_constraintBottom_toBottomOf="@id/layout_pw"
                app:layout_constraintRight_toLeftOf="@id/login_pw_transformation_icon" />

            <EditText
                android:id="@+id/login_pw_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_12"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:text="@={vm.password}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:autofillHints=""
                android:hint="@string/label_login_password_hint"
                android:background="@null"
                app:layout_constraintTop_toTopOf="@id/layout_pw"
                app:layout_constraintBottom_toBottomOf="@id/layout_pw"
                app:layout_constraintLeft_toRightOf="@id/login_pw_icon"
                app:layout_constraintRight_toLeftOf="@id/login_pw_delete_icon" />

            <Button
                android:id="@+id/login_login_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginBottom="@dimen/dp_32"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                android:gravity="center"
                android:text="@string/label_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:onClick="@{()->vm.login()}"
                android:background="@drawable/bg_login_login_btn"
                app:layout_constraintTop_toBottomOf="@id/layout_pw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:padding="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_m_50"
            android:contentDescription="@null"
            android:src="@drawable/ic_login_title"
            android:background="@drawable/bg_login_title"
            app:layout_constraintTop_toTopOf="@id/layout_input"
            app:layout_constraintLeft_toLeftOf="@id/layout_input"
            app:layout_constraintRight_toRightOf="@id/layout_input"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>